# magic-the-gathering-toolkit

./: .env.example  .gitignore  README.md  artwork-pane-redesign-proposal.md  artwork-pane-research-summary.md  artwork-pane-wireframes.txt  package-lock.json  pyproject.toml  test_exit.py
.github/workflows/: ci.yml
resources/: combos.json  limited_stats.sqlite  synergies.json
src/mtg_mcp/: __init__.py  cli.py  config.py  context.py  exceptions.py  server.py
src/mtg_mcp/cli/: README.md  __init__.py  context.py  display.py  formatting.py  main.py  pagination.py  repl.py  synergy_display.py  tui.py
src/mtg_mcp/cli/commands/: __init__.py  card.py  deck.py  set.py  synergy.py
src/mtg_mcp/cli/textual_app/: __init__.py  app.py  commands.py  search.py  styles.py  widgets.py
src/mtg_mcp/data/: database.py
src/mtg_mcp/data/database/: cache.py  manager.py  mtg.py  query.py  scryfall.py
src/mtg_mcp/data/models/: __init__.py  card.py  deck.py  inputs.py  mtg_set.py  responses.py
src/mtg_mcp/routes/: __init__.py  cards.py  deck.py  images.py  prompts.py  resources.py  sets.py  synergy.py
src/mtg_mcp/scripts/: create_datasources.py
src/mtg_mcp/tools/: cards.py  deck.py  images.py
tests/: __init__.py  conftest.py  test_card_tools.py  test_cli_commands.py  test_cli_display.py  test_cli_formatting.py  test_cli_repl.py  test_collection_price_accuracy.py  test_combo_database.py  test_deck_tools.py  test_image_tools.py  test_set_tools.py  test_synergy_tools.py  test_user_database.py
