[project]
name = "magic-the-gathering-workspace"
version = "0.1.0"
description = "Magic: The Gathering toolkit - MCP server, TUI, and core library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mtg-core",
    "mtg-spellbook",
    "mtg-mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
mtg-core = { workspace = true }
mtg-spellbook = { workspace = true }
mtg-mcp = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages/*/src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["mtg_core", "mtg_mcp_server", "mtg_spellbook"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.0",
]
